feat: add some styles

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -9,7 +9,7 @@
     <main class="main">
       <section class="controls">
         <button class="button">
-          <span class="visible-hiddenvisible-hidden">Refresh image</span>
+          <span class="visible-hidden">Refresh image</span>
         </button>
         <select name="" id="">
           <option value="">EN</option>
