feat: styling today component

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -49,12 +49,13 @@
         <p class="today__date-time">
           <span>Mon 28 October</span><span>17:23</span>
         </p>
-        <p class="today__temperature">10</p>
+        <p class="today__temperature today__temperature--cloudy">10</p>
+        <span class="today__grad">°</span>
         <div class="today__summary">
           <p>overcast</p>
-          <p>fells like</p>
-          <p>wind</p>
-          <p>humidity</p>
+          <p>fells like: 7°</p>
+          <p>wind: 2 m/s</p>
+          <p>humidity: 83%</p>
         </div>
       </section>
       <div class="forecast">
