--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -61,7 +61,7 @@
       <div class="forecast">
         <div class="forecast__day day">
           <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature">7°</span>
+          <span class="day__temperature day__temperature--cloudy">7°</span>
         </div>
         <div class="forecast__day day">
           <span class="day__weekday">Tuesday</span>
