feat: styling forecast com

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -65,11 +65,11 @@
         </div>
         <div class="forecast__day day">
           <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature">7°</span>
+          <span class="day__temperature day__temperature--cloudy">7°</span>
         </div>
         <div class="forecast__day day">
           <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature">7°</span>
+          <span class="day__temperature day__temperature--cloudy">7°</span>
         </div>
       </div>
       <section class="geo">
