feat: styling geo component

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -74,8 +74,8 @@
       </div>
       <section class="geo">
         <div class="geo__map"></div>
-        <span class="geo__coordinates">53 54</span>
-        <span class="geo__coordinates">53 54</span>
+        <span class="geo__coordinates">Latitude: 53°54'</span>
+        <span class="geo__coordinates">Longitude: 27°34'</span>
       </section>
     </main>
   </body>
