refactor: clear index html

--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -7,84 +7,6 @@
   </head>
 
   <body>
-    <main class="main">
-      <section class="controls main__controls">
-        <div>
-          <button class="button button--refresh">
-            <span class="visibility-hidden">Refresh image</span>
-          </button>
-          <div class="dropdown">
-            <button class="button dropdown__button">EN</button>
-            <ul class="list dropdown__options">
-              <li class="dropdown__item">EN</li>
-              <li class="dropdown__item">RU</li>
-              <li class="dropdown__item">BY</li>
-            </ul>
-          </div>
-          <label for="toggler" class="toggler">
-            <input class="toggler__checkbox" type="checkbox" id="toggler" />
-            <span class="toggler__slider"></span>
-            <span class="toggler__value">°F</span>
-            <span class="toggler__value">°C</span>
-          </label>
-        </div>
-        <div>
-          <a href="https://www.weatherapi.com/" title="Free Weather API"
-            ><img
-              src="//cdn.weatherapi.com/v4/images/weatherapi_logo.png"
-              alt="Weather data by WeatherAPI.com"
-              border="0"
-          /></a>
-        </div>
-        <div class="search">
-          <div class="search__input-container">
-            <input
-              class="search__input"
-              type="text"
-              placeholder="Search city or ZIP"
-            />
-          </div>
-          <div class="search__controls">
-            <button
-              class="search__controls-item search__controls-item--mic"
-            ></button>
-            <button class="search__button button">Search</button>
-          </div>
-        </div>
-      </section>
-      <section class="today main__today">
-        <p class="today__city-title">Minsk, Belarus</p>
-        <p class="today__date-time">
-          <span>Mon 28 October</span><span>17:23</span>
-        </p>
-        <p class="today__temperature today__temperature--cloudy">10</p>
-        <span class="today__grad">°</span>
-        <div class="today__summary">
-          <p>overcast</p>
-          <p>fells like: 7°</p>
-          <p>wind: 2 m/s</p>
-          <p>humidity: 83%</p>
-        </div>
-      </section>
-      <div class="forecast main__forecast">
-        <div class="forecast__day day">
-          <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature day__temperature--cloudy">7°</span>
-        </div>
-        <div class="forecast__day day">
-          <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature day__temperature--cloudy">7°</span>
-        </div>
-        <div class="forecast__day day">
-          <span class="day__weekday">Tuesday</span>
-          <span class="day__temperature day__temperature--cloudy">7°</span>
-        </div>
-      </div>
-      <section class="geo main__geo">
-        <div class="geo__map"></div>
-        <span class="geo__coordinates">Latitude: 53°54'</span>
-        <span class="geo__coordinates">Longitude: 27°34'</span>
-      </section>
-    </main>
+    <main class="main"></main>
   </body>
 </html>
